# ipc_handlers

./: CMakeLists.txt  install.sh  ipc_handlers.cmake.in
include/ipc_handlers/: common.hpp  mq_handler.hpp  shm_handler.hpp  tcp_client_template.hpp
src/: shm_handler.cpp  tcp_client_template.cpp
test/shm_handler_test/: shm_handler_consumer.cpp  shm_handler_producer.cpp
